5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1602_1016.log
== TEST (2019-03-29 14:06:14) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s=a+b+c/2
area=sqrt(s(s-a)*(s-b)*(s-c))
print(round(area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area=sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:08:09) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s=a+b+c/2
area=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:08:42) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s=a+b+c/2
area=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:09:47) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s=a+b+c/2
area=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:10:38) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s=a+b+c/2
area=sqrt(s*(s-a*s-b*s-c))
print(round(area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area=sqrt(s*(s-a*s-b*s-c))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:11:27) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s=a+b+c/2
print(s)
print(round(area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(area,5))
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:11:58) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s=a+b+c/2
print(s)

-- OUTPUT:
37.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:12:27) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s= a+b+c / 2
print(s)

-- OUTPUT:
37.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:12:59) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s= a + b + c / 2
print(s)

-- OUTPUT:
37.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:13:18) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s= a + b + c / 2
print(s)

-- OUTPUT:
37.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:13:30) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s= a + b + c / 2
print(s)

-- OUTPUT:
37.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:13:46) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s= a + b + c / 2
print(s)

-- OUTPUT:
37.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:14:32) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s= a + b + c // 2
print(s)

-- OUTPUT:
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:15:52) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s= (a + b + c) / 2
print(s)

-- OUTPUT:
21.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:17:33) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s= (a + b + c) / 2

area = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:17:40) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s= (a + b + c) / 2

area = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 14:18:26) 
-- CODE:
from math import *
a = float(input("comprimento 1: "))
b = float(input("comprimento 2: "))
c = float(input("comprimento 3: "))

s= (a + b + c) / 2

area = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))

-- EXECUTION TIME:
0.140855
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
